# piv-bubble-prediction

./: .gitignore  CLAUDE.md  DEEP_LEARNING_APPROACH.md  README.md  alliance-docs-mcp-bug-report.md  main.py  plan.md  pyproject.toml
.cursor/plans/: deploy_to_nibi_cluster.plan.md  finish_phase_3_training_pipeline_7f755f6f.plan.md  optuna_hyperparameter_tuning,_mps_support,_and_weights_&_biases_integration_0232f7ba.plan.md
docs/: NIBI_DEPLOYMENT.html  NIBI_DEPLOYMENT.md
models/: best_model.pt
scripts/nibi/: activate_env.sh  setup_modules.sh  setup_venv.sh
scripts/slurm/: evaluate.sh  submit_tuning.sh  train.sh  tune.sh  tune_worker.sbatch
scripts/transfer/: sync_data.sh
src/: __init__.py  config.py  constants.py  data_loader.py  dataset.py  evaluate.py  meta_tune.py  optuna_worker.py  paths.py  piv_metrics.py  train.py  tune.py  visualize.py  zarr_reader.py
src/models/: __init__.py  cnn_lstm.py
wandb/: latest-run
wandb/run-20260115_155239-dbdy6vf4/: run-dbdy6vf4.wandb
wandb/run-20260115_155239-dbdy6vf4/files/: config.yaml  wandb-metadata.json
wandb/run-20260115_155454-0r9bbxz2/: run-0r9bbxz2.wandb
wandb/run-20260115_155454-0r9bbxz2/files/: config.yaml  wandb-metadata.json
wandb/run-20260115_155811-1uqfzs8e/: run-1uqfzs8e.wandb
wandb/run-20260115_161127-vgq3ue9k/: run-vgq3ue9k.wandb
wandb/run-20260115_162357-50xer1st/: run-50xer1st.wandb
wandb/run-20260115_162513-9siriopg/: run-9siriopg.wandb
wandb/run-20260115_162732-r4zy6ugv/: run-r4zy6ugv.wandb
wandb/run-20260115_163031-2yj0h84b/: run-2yj0h84b.wandb
(+16 files in other folders)
